source/lemon_h.ads


--    --  Generate spec file (parse.h for parse.y).
--     procedure lime_generate_the_defines_1
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : int;
--        arg3 : Interfaces.C.Strings.chars_ptr;
--        arg4 : int;
--        arg5 : int);  -- lemon.h:339
--     pragma Import (C, lime_generate_the_defines_1, "lime_generate_the_defines_1");

--     procedure lime_generate_the_defines_2 (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:349
--     pragma Import (C, lime_generate_the_defines_2, "lime_generate_the_defines_2");

   type mystruct is record
      use_count : aliased int;  -- lemon.h:356
      index : aliased int;  -- lemon.h:357
      dt_num : aliased int;  -- lemon.h:358
   end record;
   pragma Convention (C_Pass_By_Copy, mystruct);  -- lemon.h:354

   procedure lime_error_fallback
     (arg1 : Interfaces.C.Strings.chars_ptr;
      arg2 : access mystruct;
      arg3 : int);  -- lemon.h:362
   pragma Import (C, lime_error_fallback, "lime_error_fallback");

   type lime_render_record is record
      Nxstate : aliased int;  -- lemon.h:372
      nrule : aliased int;  -- lemon.h:373
      nterminal : aliased int;  -- lemon.h:374
      minShiftReduce : aliased int;  -- lemon.h:375
      errAction : aliased int;  -- lemon.h:376
      accAction : aliased int;  -- lemon.h:377
      noAction : aliased int;  -- lemon.h:378
      minReduce : aliased int;  -- lemon.h:379
   end record;
   pragma Convention (C_Pass_By_Copy, lime_render_record);  -- lemon.h:370

--     procedure lime_render_constants (arg1 : access lime_render_record);  -- lemon.h:383
--     pragma Import (C, lime_render_constants, "lime_render_constants");

--     procedure lime_write_action_table (arg1 : int; arg2 : int);  -- lemon.h:388
--     pragma Import (C, lime_write_action_table, "lime_write_action_table");

--     procedure lime_write_yy_lookahead (arg1 : int; arg2 : int);  -- lemon.h:395
--     pragma Import (C, lime_write_yy_lookahead, "lime_write_yy_lookahead");

--     procedure lime_write_yy_shift_offsets
--       (arg1 : int;
--        arg2 : int;
--        arg3 : int;
--        arg4 : Interfaces.C.Strings.chars_ptr;
--        arg5 : int;
--        arg6 : int);  -- lemon.h:402
--     pragma Import (C, lime_write_yy_shift_offsets, "lime_write_yy_shift_offsets");

--     procedure lime_write_yy_reduce_offsets
--       (arg1 : int;
--        arg2 : int;
--        arg3 : int;
--        arg4 : Interfaces.C.Strings.chars_ptr;
--        arg5 : int);  -- lemon.h:413
--     pragma Import (C, lime_write_yy_reduce_offsets, "lime_write_yy_reduce_offsets");

--     procedure lime_write_default_action_table
--       (arg1 : int;
--        arg2 : int;
--        arg3 : int);  -- lemon.h:423
--     pragma Import (C, lime_write_default_action_table, "lime_write_default_action_table");

--     procedure lime_put (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:431
--     pragma Import (C, lime_put, "lime_put");

--     procedure lime_put_int (arg1 : int);  -- lemon.h:436
--     pragma Import (C, lime_put_int, "lime_put_int");

--     procedure lime_put_line (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:441
--     pragma Import (C, lime_put_line, "lime_put_line");

--     procedure lime_write_line_directive (arg1 : int; arg2 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:446
--     pragma Import (C, lime_write_line_directive, "lime_write_line_directive");

--     procedure lime_template_print
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : int;
--        arg3 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:453
--     pragma Import (C, lime_template_print, "lime_template_print");

--    -- int          line_number,
--     procedure lime_write_arg_defines
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : Interfaces.C.Strings.chars_ptr;
--        arg3 : int;
--        arg4 : Interfaces.C.Strings.chars_ptr;
--        arg5 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:462
--     pragma Import (C, lime_write_arg_defines, "lime_write_arg_defines");

--     procedure lime_close_out;  -- lemon.h:472
--     pragma Import (C, lime_close_out, "lime_close_out");

--     procedure lime_close_in;  -- lemon.h:477
--     pragma Import (C, lime_close_in, "lime_close_in");

--    --int
--    --lime_get_mh_flag (void);
--     procedure lime_write_interface (arg1 : Interfaces.C.Strings.chars_ptr; arg2 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:487
--     pragma Import (C, lime_write_interface, "lime_write_interface");

--     procedure lime_write_interface_begin;  -- lemon.h:493
--     pragma Import (C, lime_write_interface_begin, "lime_write_interface_begin");

--     procedure lime_write_interface_end;  -- lemon.h:494
--     pragma Import (C, lime_write_interface_end, "lime_write_interface_end");

--     procedure lime_report_header
--       (arg1 : Interfaces.C.Strings.chars_ptr;
--        arg2 : Interfaces.C.Strings.chars_ptr;
--        arg3 : Interfaces.C.Strings.chars_ptr;
--        arg4 : int);  -- lemon.h:499
--     pragma Import (C, lime_report_header, "lime_report_header");

--   procedure lime_generate_reprint_of_grammar;  -- lemon.h:507
--   pragma Import (C, lime_generate_reprint_of_grammar, "lime_generate_reprint_of_grammar");

--   procedure lime_set_out_name (arg1 : Interfaces.C.Strings.chars_ptr);  -- lemon.h:512
--   pragma Import (C, lime_set_out_name, "lime_set_out_name");

--   function lime_get_out_name return Interfaces.C.Strings.chars_ptr;  -- lemon.h:518
--   pragma Import (C, lime_get_out_name, "lime_get_out_name");

end lemon_h;
